# headlight-pricer

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: .env.example  config.py  db.py  extract.py  flags.py  main.py  models.py  pricing.py  scraper.py
frontend/: pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: AddItemForm.tsx  ComparablesTable.tsx  FlagChecklist.tsx  HistoryChart.tsx  ItemDetail.tsx  StrategyCard.tsx
frontend/src/lib/: api.ts  flags.ts
